test/visibility/submodule-in-file/errors/WrongModule1.chpl
module OtherModule {
  include module SubModule;
  proc main() {
  }
}
