test/visibility/submodule-in-file/errors/WrongModule1.good
WrongModule1.chpl:2: error: Cannot include modules from a module whose name doesn't match its filename
